fixing styles on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -167,10 +167,28 @@ html.wf-active .sans-serif {
   .Quote_Short {
     font-size: 2.5rem;
   }
+  .Quote_Short[data-size="xl"] {
+    font-size: 1.75rem;
+  }
+  .Quote_Short[data-size="l"] {
+    font-size: 2.25rem;
+  }
+  .Quote_Short[data-size="m"] {
+    font-size: 2.5rem;
+  }
 }
 
 @media (max-width: 30em) {
   .Quote_Short {
+    font-size: 2rem;
+  }
+  .Quote_Short[data-size="xl"] {
+    font-size: 1.25rem;
+  }
+  .Quote_Short[data-size="l"] {
+    font-size: 1.75rem;
+  }
+  .Quote_Short[data-size="m"] {
     font-size: 2rem;
   }
 }
